# lattice

./: .gitignore  README.md  lattice.yaml.example  pyproject.toml
docs/: api-reference.md  architecture.md
examples/: 01_simple_chat.py  02_tool_use.py  03_memory.py  04_plan_execute.py  05_multi_agent.py  06_eval.py
lattice/: __init__.py
lattice/agent/: __init__.py  agent.py  strategy.py  types.py
lattice/eval/: __init__.py  evaluators.py  runner.py  types.py
lattice/llm/: __init__.py  config.py  provider.py  types.py
lattice/llm/providers/: __init__.py  anthropic.py  deepseek.py  openai.py
lattice/memory/: __init__.py  base.py  composite.py  episodic.py  semantic.py  working.py
lattice/memory/stores/: __init__.py  chroma.py  in_memory.py
lattice/orchestrator/: __init__.py  graph.py  pipeline.py  supervisor.py
lattice/planner/: __init__.py  base.py  llm_planner.py  static_planner.py
lattice/tool/: __init__.py  middleware.py  tool.py  toolkit.py
lattice/tool/builtins/: __init__.py  file.py  shell.py  web.py
lattice/trace/: __init__.py  exporters.py  tracer.py
tests/test_agent/: test_agent.py
tests/test_eval/: test_eval.py
tests/test_llm/: test_types.py
tests/test_memory/: test_memory.py
tests/test_orchestrator/: test_orchestrator.py
tests/test_planner/: test_planner.py
tests/test_tool/: test_tool.py
